--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
     "@nextui-org/react": "^2.2.9",
-    "ai": "^2.2.33",
-    "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12",
     "@radix-ui/react-popover": "^1.0.7",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.1",
+    "ai": "^2.2.33",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.0"
