--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/generative-ai": "^0.2.0",
     "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-popover": "^1.0.7",
+    "@tanstack/react-query-devtools": "^5.18.1",
+    "@tanstack/react-query-next-experimental": "^5.18.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.1",
     "ai": "^2.2.33",
@@ -24,6 +26,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.0"
   },
